# data-ex-vis

./: README.md
Archive/Application/: Create_an_application.ipynb
Archive/InteractiveVisualizations/: worksheet-interactive.ipynb
Archive/Timeseries/: Waterlevel-statistics.ipynb
Assignments/Application/: Create_an_application.ipynb
Assignments/Image_Exploration/: Ex-1A-ImageSegmentation.ipynb  Ex-1B-ImageSegmentation.ipynb  Ex-2A-Sudoku.ipynb  Ex-2B-AnalysingVideoStream.ipynb  Readme  env_variables  environment.yml  requirements.txt
Assignments/NLP/: Readme.md
Lectures/Datacleaning-reproducibility/: 01-DataGoesMissing.ipynb  02-MissingData-BiologicalDB.ipynb  Readme.md  Tools_for_reproducible_workflows.ipynb  env_variables  requirements.txt
Lectures/HTTP-REST-API/: 01-HTTP_protocol_REST_services.ipynb  Ex-01-Fastapi-simple.py  Ex-01-REST-API-basics-jupyterkernelgateway.ipynb  Ex-02-REST-API-wdata-jupyterkernelgateway.ipynb  Ex-03-REST-bokeh-embed-jupyterkernelgateway.ipynb  Ex-UsingTheOurWorldInDataChartAPI.ipynb  Generate_data_w_faker.py  Readme.md  bokeh-embed.html  owid.bash  preview-nb-api.sh  pyproject.toml  requirements.txt
Lectures/Image_Exploration/: requirements.txt
Lectures/Interactive_Visualization/: 01-Technology_FurtherReadings.ipynb  02-Tutorial-interactive-plot.ipynb  03-Plotly_dash_server_example.ipynb  04-Linking_Plots_bokeh_holoviews.ipynb  05-Dashboard.ipynb  17-Dashboards.ipynb  pyproject.toml
Lectures/LargeData/: 01-Working-with-large-datasets.ipynb  Datashader-01-Pipeline.ipynb  Datashader-04-Timeseries.ipynb  pyproject.toml
Lectures/NLP/: Twitter-nlp.ipynb  (+1 more)
(+10 files in other folders)
