[tool.poetry]
name = "l-largedata"
version = "0.1.0"
description = ""
authors = ["jegesm <david.visontai@ttk.elte.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
datashader = "^0.16.1"
numpy = "^1.26.4"
collection = "^0.1.6"
ipykernel = "^6.29.4"
holoviews = "^1.18.3"
dotenv = "^0.9.9"
graphviz = "^0.20.3"
ipycytoscape = "^1.3.3"
scikit-image = "^0.25.2"
dask = {extras = ["complete"], version = "^2025.4.1"}
distributed = "^2025.4.1"
dask-expr = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
